--- a/main.css
+++ b/main.css
@@ -60,6 +60,12 @@ div.lastupdated { font-size: 12px; }
     z-index: 1;
 }
 
+.custom-subheading {
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
